ZSR9/Z3/.gcc.out
/rhome/l/lbuturovic1/workspace/OR/ZSR9/Z3/main.c:43:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
